[Fix] On small screens flushed box settings doesn't properly align to left.

--- a/scss/_box-settings.scss
+++ b/scss/_box-settings.scss
@@ -16,7 +16,7 @@
 					@include media(max-width, md) {
 						padding-top: $sui-gutter-md;
 					}
-	
+
 					@include media(min-width, md) {
 						margin-left: $sui-gutter;
 					}
@@ -39,7 +39,7 @@
 			// VARIATION: Flushed
 			&.sui-flushed {
 				margin-right: -#{$sui-gutter-md};
-				margin-left: -#{sui-gutter-md};
+				margin-left: -#{$sui-gutter-md};
 				padding-right: $sui-gutter-md;
 				padding-left: $sui-gutter-md;
 
@@ -68,7 +68,7 @@
 					@include media(max-width, md) {
 						padding-top: $sui-gutter-md;
 					}
-	
+
 					@include media(min-width, md) {
 						margin-left: $sui-gutter;
 					}
